--- a/README
+++ b/README
@@ -1,18 +1,12 @@
-To do after install:
+# Twinbridge Server
 
-Create SSL keys with OpenVPN EasyRSA : 
-  https://github.com/OpenVPN/easy-rsa
-  https://www.digitalocean.com/community/tutorials/how-to-set-up-an-openvpn-server-on-ubuntu-18-04
+### To do after install:
+
+/!\ Note the database's username and password /!\
+/!\ Update the client's ovpn config file (client.ovpn) to contain the newly generated CA key and certificate /!\
   
-  !!!The client ovpn files will require modification to include the latest CA key of the new server!!!
-  
-Edit config 
-Clone example config /etc/tbServer/bin/includes/config.json.example and complete the values
-  /etc/tbServer/bin/includes/config.json
+Make a copy of /etc/tbServer/bin/includes/config.json.example and remove the .example
+Update the new file with the database credentials you received at the end of the installation script.
   +DB credentials for twinbridge database
   +DB credentials for WordPress database
   +SMTP credentials for email account
-  
-
-
-
